<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_fecha"
          android:title="@string/action_fecha"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_matricula"
          android:title="@string/action_matricula"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_cliente"
          android:title="@string/action_cliente"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_descripcion"
          android:title="@string/action_descripcion"
          android:orderInCategory="100"
          app:showAsAction="never"/>
</menu>