<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="com.flotix.activities.ui.home.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/nav_alquileres"
            android:name="com.flotix.activities.ui.alquileres.AlquilerFragment"
            android:label="@string/menu_alquileres"
            tools:layout="@layout/fragment_alquiler"/>

    <fragment
            android:id="@+id/nav_ajustes"
            android:name="com.flotix.activities.ui.ajustes.AjustesFragment"
            android:label="@string/menu_ajustes"
            tools:layout="@layout/fragment_ajustes"/>

    <fragment
            android:id="@+id/nav_salir"
            android:name="com.flotix.activities.CloseFragment"
            android:label="@string/menu_salir"
            tools:layout="@layout/fragment_close"/>

</navigation>